// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SafeExplorationDemo Snapshot matches snapshot in initial state 1`] = `
<div
  class="max-w-6xl mx-auto p-6 bg-white rounded-lg shadow-lg"
>
  <header
    class="mb-6 flex justify-between items-start"
  >
    <div>
      <h2
        class="text-2xl font-bold text-gray-900 mb-2"
      >
        Safe Exploration Playground
      </h2>
      <p
        class="text-gray-600"
      >
        Experiment freely without fear of breaking anything
      </p>
    </div>
    <div
      class="flex items-center space-x-4"
    >
      <select
        class="px-3 py-2 border border-gray-300 rounded-lg text-sm focus:outline-none focus:ring-2 focus:ring-green-500"
      >
        <option
          value="sandbox"
        >
          Sandbox Mode
        </option>
        <option
          value="guided"
        >
          Guided Mode
        </option>
        <option
          value="freeform"
        >
          Freeform Mode
        </option>
      </select>
      <button
        class="px-4 py-2 bg-green-600 text-white rounded-lg hover:bg-green-700 transition-colors"
      >
        Safety Info
      </button>
    </div>
  </header>
  <div
    class="mb-6 bg-green-50 border border-green-200 rounded-lg p-4 transition-all duration-300"
  >
    <h3
      class="font-semibold text-green-900 mb-3 flex items-center"
    >
      <span
        class="mr-2"
      >
        🛡️
      </span>
      Safety Features
    </h3>
    <div
      class="grid md:grid-cols-2 gap-4 text-sm text-green-700"
    >
      <div
        class="space-y-2"
      >
        <div>
          • 
          <strong>
            Isolated Environment:
          </strong>
           Changes don't affect your main workspace
        </div>
        <div>
          • 
          <strong>
            Automatic Backups:
          </strong>
           Your data is automatically backed up
        </div>
        <div>
          • 
          <strong>
            Easy Undo:
          </strong>
           Every action can be reversed
        </div>
      </div>
      <div
        class="space-y-2"
      >
        <div>
          • 
          <strong>
            Time Limits:
          </strong>
           Experiments auto-expire for safety
        </div>
        <div>
          • 
          <strong>
            Clear Boundaries:
          </strong>
           You'll always know what's experimental
        </div>
        <div>
          • 
          <strong>
            Choose Your Level:
          </strong>
           From guided tutorials to free exploration
        </div>
      </div>
    </div>
    <div
      class="mt-3 pt-3 border-t border-green-200"
    >
      <p
        class="text-sm text-green-600"
      >
        <strong>
          Current Mode:
        </strong>
         
        Sandbox
         - 
        Completely isolated environment
      </p>
    </div>
  </div>
  <div
    class="grid grid-cols-1 lg:grid-cols-3 gap-6"
  >
    <div
      class="lg:col-span-2"
    >
      <div
        class="space-y-6"
      >
        <div
          class="bg-gray-50 border border-gray-200 rounded-lg p-4"
        >
          <h3
            class="font-medium text-gray-900 mb-4"
          >
            Start New Experiment
          </h3>
          <div
            class="space-y-4"
          >
            <div>
              <label
                class="block text-sm font-medium text-gray-700 mb-2"
              >
                Experiment Name
              </label>
              <input
                class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-green-500"
                placeholder="My AI Experiment"
                type="text"
                value=""
              />
            </div>
            <button
              class="w-full px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 disabled:opacity-50 disabled:cursor-not-allowed transition-colors"
              disabled=""
            >
              Start Custom Experiment
            </button>
          </div>
        </div>
        <div
          class="bg-white border border-gray-200 rounded-lg"
        >
          <div
            class="bg-gray-50 px-4 py-2 border-b border-gray-200"
          >
            <span
              class="text-sm font-medium text-gray-700"
            >
              Quick Start Templates
            </span>
          </div>
          <div
            class="p-4 space-y-3"
          >
            <div
              class="border border-gray-200 rounded-lg p-3 cursor-pointer hover:bg-gray-50 transition-colors"
            >
              <h4
                class="font-medium text-gray-900"
              >
                AI Writing Style
              </h4>
              <p
                class="text-sm text-gray-600 mt-1"
              >
                Experiment with different AI writing styles and tones
              </p>
            </div>
            <div
              class="border border-gray-200 rounded-lg p-3 cursor-pointer hover:bg-gray-50 transition-colors"
            >
              <h4
                class="font-medium text-gray-900"
              >
                Interface Layout
              </h4>
              <p
                class="text-sm text-gray-600 mt-1"
              >
                Try new interface arrangements and components
              </p>
            </div>
            <div
              class="border border-gray-200 rounded-lg p-3 cursor-pointer hover:bg-gray-50 transition-colors"
            >
              <h4
                class="font-medium text-gray-900"
              >
                Data Visualization
              </h4>
              <p
                class="text-sm text-gray-600 mt-1"
              >
                Explore different ways to visualize your data
              </p>
            </div>
            <div
              class="border border-gray-200 rounded-lg p-3 cursor-pointer hover:bg-gray-50 transition-colors"
            >
              <h4
                class="font-medium text-gray-900"
              >
                Automation Rules
              </h4>
              <p
                class="text-sm text-gray-600 mt-1"
              >
                Test new automation workflows safely
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="space-y-4"
    >
      <div
        class="bg-gray-50 border border-gray-200 rounded-lg p-4"
      >
        <h3
          class="font-medium text-gray-900 mb-3"
        >
          Exploration History
        </h3>
        <p
          class="text-sm text-gray-600 italic"
        >
          No experiments yet
        </p>
      </div>
      <div
        class="bg-purple-50 border border-purple-200 rounded-lg p-4"
      >
        <h3
          class="font-medium text-purple-900 mb-3"
        >
          Current Mode
        </h3>
        <div
          class="space-y-2 text-sm"
        >
          <div
            class="flex justify-between"
          >
            <span
              class="text-purple-700"
            >
              Mode:
            </span>
            <span
              class="font-medium"
            >
              Sandbox
            </span>
          </div>
          <div
            class="flex justify-between"
          >
            <span
              class="text-purple-700"
            >
              Active Experiments:
            </span>
            <span
              class="font-medium"
            >
              0
            </span>
          </div>
          <div
            class="flex justify-between"
          >
            <span
              class="text-purple-700"
            >
              Safety Guards:
            </span>
            <span
              class="font-medium"
            >
              0
            </span>
          </div>
        </div>
      </div>
      <div
        class="bg-green-50 border border-green-200 rounded-lg p-4"
      >
        <h3
          class="font-medium text-green-900 mb-2"
        >
          Safe Exploration Tips
        </h3>
        <ul
          class="text-sm text-green-700 space-y-1"
        >
          <li
            class="flex items-start"
          >
            <span
              class="w-1 h-1 bg-green-600 rounded-full mt-2 mr-2 flex-shrink-0"
            />
            Start with templates if you're new
          </li>
          <li
            class="flex items-start"
          >
            <span
              class="w-1 h-1 bg-green-600 rounded-full mt-2 mr-2 flex-shrink-0"
            />
            All changes are reversible
          </li>
          <li
            class="flex items-start"
          >
            <span
              class="w-1 h-1 bg-green-600 rounded-full mt-2 mr-2 flex-shrink-0"
            />
            Experiment freely - nothing can break
          </li>
          <li
            class="flex items-start"
          >
            <span
              class="w-1 h-1 bg-green-600 rounded-full mt-2 mr-2 flex-shrink-0"
            />
            Save only changes you want to keep
          </li>
          <li
            class="flex items-start"
          >
            <span
              class="w-1 h-1 bg-green-600 rounded-full mt-2 mr-2 flex-shrink-0"
            />
            Try different modes for various levels of guidance
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`SafeExplorationDemo Snapshot matches snapshot with active experiment 1`] = `
<div
  class="max-w-6xl mx-auto p-6 bg-white rounded-lg shadow-lg"
>
  <header
    class="mb-6 flex justify-between items-start"
  >
    <div>
      <h2
        class="text-2xl font-bold text-gray-900 mb-2"
      >
        Safe Exploration Playground
      </h2>
      <p
        class="text-gray-600"
      >
        Experiment freely without fear of breaking anything
      </p>
    </div>
    <div
      class="flex items-center space-x-4"
    >
      <select
        class="px-3 py-2 border border-gray-300 rounded-lg text-sm focus:outline-none focus:ring-2 focus:ring-green-500"
      >
        <option
          value="sandbox"
        >
          Sandbox Mode
        </option>
        <option
          value="guided"
        >
          Guided Mode
        </option>
        <option
          value="freeform"
        >
          Freeform Mode
        </option>
      </select>
      <button
        class="px-4 py-2 bg-green-600 text-white rounded-lg hover:bg-green-700 transition-colors"
      >
        Safety Info
      </button>
    </div>
  </header>
  <div
    class="mb-6 bg-green-50 border border-green-200 rounded-lg p-4 transition-all duration-300"
  >
    <h3
      class="font-semibold text-green-900 mb-3 flex items-center"
    >
      <span
        class="mr-2"
      >
        🛡️
      </span>
      Safety Features
    </h3>
    <div
      class="grid md:grid-cols-2 gap-4 text-sm text-green-700"
    >
      <div
        class="space-y-2"
      >
        <div>
          • 
          <strong>
            Isolated Environment:
          </strong>
           Changes don't affect your main workspace
        </div>
        <div>
          • 
          <strong>
            Automatic Backups:
          </strong>
           Your data is automatically backed up
        </div>
        <div>
          • 
          <strong>
            Easy Undo:
          </strong>
           Every action can be reversed
        </div>
      </div>
      <div
        class="space-y-2"
      >
        <div>
          • 
          <strong>
            Time Limits:
          </strong>
           Experiments auto-expire for safety
        </div>
        <div>
          • 
          <strong>
            Clear Boundaries:
          </strong>
           You'll always know what's experimental
        </div>
        <div>
          • 
          <strong>
            Choose Your Level:
          </strong>
           From guided tutorials to free exploration
        </div>
      </div>
    </div>
    <div
      class="mt-3 pt-3 border-t border-green-200"
    >
      <p
        class="text-sm text-green-600"
      >
        <strong>
          Current Mode:
        </strong>
         
        Sandbox
         - 
        Completely isolated environment
      </p>
    </div>
  </div>
  <div
    class="grid grid-cols-1 lg:grid-cols-3 gap-6"
  >
    <div
      class="lg:col-span-2"
    >
      <div
        class="space-y-4"
      >
        <div
          class="bg-blue-50 border border-blue-200 rounded-lg p-4"
        >
          <div
            class="flex justify-between items-start mb-2"
          >
            <h3
              class="font-medium text-blue-900"
            >
              🧪 Active Experiment: 
              AI Writing Style
            </h3>
            <div
              class="space-x-2"
            >
              <button
                class="text-xs px-3 py-1 bg-gray-200 text-gray-600 rounded hover:bg-gray-300 disabled:opacity-50 disabled:cursor-not-allowed transition-colors"
                disabled=""
              >
                Undo Last
              </button>
              <button
                class="text-xs px-3 py-1 bg-red-200 text-red-600 rounded hover:bg-red-300 transition-colors"
              >
                Discard
              </button>
              <button
                class="text-xs px-3 py-1 bg-green-200 text-green-600 rounded hover:bg-green-300 transition-colors"
              >
                Save & Apply
              </button>
            </div>
          </div>
          <p
            class="text-sm text-blue-700"
          >
            Experiment with different AI writing styles and tones
          </p>
          <div
            class="mt-2 text-xs text-blue-600"
          >
            Mode: 
            sandbox
             | Changes: 
            0
             | Can Undo: 
            Yes
          </div>
        </div>
        <div
          class="bg-white border border-gray-200 rounded-lg"
        >
          <div
            class="bg-gray-50 px-4 py-2 border-b border-gray-200"
          >
            <span
              class="text-sm font-medium text-gray-700"
            >
              Experiment Workspace
            </span>
          </div>
          <div
            class="p-4 space-y-4"
          >
            <div>
              <label
                class="block text-sm font-medium text-gray-700 mb-2"
              >
                Try an experimental change:
              </label>
              <div
                class="grid grid-cols-2 gap-2"
              >
                <button
                  class="px-3 py-2 bg-gray-600 text-white rounded text-sm hover:bg-gray-700 transition-colors"
                >
                  Dark Mode
                </button>
                <button
                  class="px-3 py-2 bg-purple-600 text-white rounded text-sm hover:bg-purple-700 transition-colors"
                >
                  AI Boost
                </button>
                <button
                  class="px-3 py-2 bg-blue-600 text-white rounded text-sm hover:bg-blue-700 transition-colors"
                >
                  New Layout
                </button>
                <button
                  class="px-3 py-2 bg-green-600 text-white rounded text-sm hover:bg-green-700 transition-colors"
                >
                  Beta Feature
                </button>
                <button
                  class="px-3 py-2 bg-red-600 text-white rounded text-sm hover:bg-red-700 transition-colors"
                >
                  Delete Files
                </button>
                <button
                  class="px-3 py-2 bg-indigo-600 text-white rounded text-sm hover:bg-indigo-700 transition-colors"
                >
                  Notifications
                </button>
              </div>
            </div>
            <div
              class="text-center py-8 text-gray-500"
            >
              <div
                class="w-16 h-16 bg-gray-200 rounded-full mx-auto mb-4 flex items-center justify-center"
              >
                <span
                  class="text-2xl"
                >
                  🧪
                </span>
              </div>
              <p
                class="text-sm"
              >
                No changes made yet
              </p>
              <p
                class="text-xs mt-1"
              >
                Click any button above to start experimenting
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="space-y-4"
    >
      <div
        class="bg-yellow-50 border border-yellow-200 rounded-lg p-4"
      >
        <h3
          class="font-medium text-yellow-900 mb-3"
        >
          🛡️ Safety Guards
        </h3>
        <div
          class="space-y-2"
        >
          <div
            class="p-2 rounded border bg-blue-50 border-blue-200 text-blue-800"
          >
            <div
              class="flex items-start space-x-2"
            >
              <span
                class="text-sm"
              >
                🎯
              </span>
              <div
                class="flex-1"
              >
                <p
                  class="text-xs font-medium uppercase tracking-wide mb-1"
                >
                  scope
                   
                  - info
                </p>
                <p
                  class="text-sm"
                >
                  This experiment is isolated from your main data and settings
                </p>
              </div>
            </div>
          </div>
          <div
            class="p-2 rounded border bg-blue-50 border-blue-200 text-blue-800"
          >
            <div
              class="flex items-start space-x-2"
            >
              <span
                class="text-sm"
              >
                🔒
              </span>
              <div
                class="flex-1"
              >
                <p
                  class="text-xs font-medium uppercase tracking-wide mb-1"
                >
                  data
                   
                  - info
                </p>
                <p
                  class="text-sm"
                >
                  Automatic backup created before starting experiment
                </p>
              </div>
            </div>
          </div>
          <div
            class="p-2 rounded border bg-yellow-50 border-yellow-200 text-yellow-800"
          >
            <div
              class="flex items-start space-x-2"
            >
              <span
                class="text-sm"
              >
                🎯
              </span>
              <div
                class="flex-1"
              >
                <p
                  class="text-xs font-medium uppercase tracking-wide mb-1"
                >
                  scope
                   
                  - warning
                </p>
                <p
                  class="text-sm"
                >
                  Experiment will auto-expire in 24 hours for safety
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="bg-gray-50 border border-gray-200 rounded-lg p-4"
      >
        <h3
          class="font-medium text-gray-900 mb-3"
        >
          Exploration History
        </h3>
        <div
          class="space-y-2 max-h-48 overflow-y-auto"
        >
          <div
            class="p-2 rounded border border-blue-300 bg-blue-50"
          >
            <div
              class="font-medium text-sm"
            >
              AI Writing Style
            </div>
            <div
              class="text-xs text-gray-600"
            >
              0
               changes made
               (Active)
            </div>
          </div>
        </div>
      </div>
      <div
        class="bg-purple-50 border border-purple-200 rounded-lg p-4"
      >
        <h3
          class="font-medium text-purple-900 mb-3"
        >
          Current Mode
        </h3>
        <div
          class="space-y-2 text-sm"
        >
          <div
            class="flex justify-between"
          >
            <span
              class="text-purple-700"
            >
              Mode:
            </span>
            <span
              class="font-medium"
            >
              Sandbox
            </span>
          </div>
          <div
            class="flex justify-between"
          >
            <span
              class="text-purple-700"
            >
              Active Experiments:
            </span>
            <span
              class="font-medium"
            >
              1
            </span>
          </div>
          <div
            class="flex justify-between"
          >
            <span
              class="text-purple-700"
            >
              Safety Guards:
            </span>
            <span
              class="font-medium"
            >
              3
            </span>
          </div>
        </div>
      </div>
      <div
        class="bg-green-50 border border-green-200 rounded-lg p-4"
      >
        <h3
          class="font-medium text-green-900 mb-2"
        >
          Safe Exploration Tips
        </h3>
        <ul
          class="text-sm text-green-700 space-y-1"
        >
          <li
            class="flex items-start"
          >
            <span
              class="w-1 h-1 bg-green-600 rounded-full mt-2 mr-2 flex-shrink-0"
            />
            Start with templates if you're new
          </li>
          <li
            class="flex items-start"
          >
            <span
              class="w-1 h-1 bg-green-600 rounded-full mt-2 mr-2 flex-shrink-0"
            />
            All changes are reversible
          </li>
          <li
            class="flex items-start"
          >
            <span
              class="w-1 h-1 bg-green-600 rounded-full mt-2 mr-2 flex-shrink-0"
            />
            Experiment freely - nothing can break
          </li>
          <li
            class="flex items-start"
          >
            <span
              class="w-1 h-1 bg-green-600 rounded-full mt-2 mr-2 flex-shrink-0"
            />
            Save only changes you want to keep
          </li>
          <li
            class="flex items-start"
          >
            <span
              class="w-1 h-1 bg-green-600 rounded-full mt-2 mr-2 flex-shrink-0"
            />
            Try different modes for various levels of guidance
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`SafeExplorationDemo Snapshot matches snapshot with experimental changes 1`] = `
<div
  class="max-w-6xl mx-auto p-6 bg-white rounded-lg shadow-lg"
>
  <header
    class="mb-6 flex justify-between items-start"
  >
    <div>
      <h2
        class="text-2xl font-bold text-gray-900 mb-2"
      >
        Safe Exploration Playground
      </h2>
      <p
        class="text-gray-600"
      >
        Experiment freely without fear of breaking anything
      </p>
    </div>
    <div
      class="flex items-center space-x-4"
    >
      <select
        class="px-3 py-2 border border-gray-300 rounded-lg text-sm focus:outline-none focus:ring-2 focus:ring-green-500"
      >
        <option
          value="sandbox"
        >
          Sandbox Mode
        </option>
        <option
          value="guided"
        >
          Guided Mode
        </option>
        <option
          value="freeform"
        >
          Freeform Mode
        </option>
      </select>
      <button
        class="px-4 py-2 bg-green-600 text-white rounded-lg hover:bg-green-700 transition-colors"
      >
        Safety Info
      </button>
    </div>
  </header>
  <div
    class="mb-6 bg-green-50 border border-green-200 rounded-lg p-4 transition-all duration-300"
  >
    <h3
      class="font-semibold text-green-900 mb-3 flex items-center"
    >
      <span
        class="mr-2"
      >
        🛡️
      </span>
      Safety Features
    </h3>
    <div
      class="grid md:grid-cols-2 gap-4 text-sm text-green-700"
    >
      <div
        class="space-y-2"
      >
        <div>
          • 
          <strong>
            Isolated Environment:
          </strong>
           Changes don't affect your main workspace
        </div>
        <div>
          • 
          <strong>
            Automatic Backups:
          </strong>
           Your data is automatically backed up
        </div>
        <div>
          • 
          <strong>
            Easy Undo:
          </strong>
           Every action can be reversed
        </div>
      </div>
      <div
        class="space-y-2"
      >
        <div>
          • 
          <strong>
            Time Limits:
          </strong>
           Experiments auto-expire for safety
        </div>
        <div>
          • 
          <strong>
            Clear Boundaries:
          </strong>
           You'll always know what's experimental
        </div>
        <div>
          • 
          <strong>
            Choose Your Level:
          </strong>
           From guided tutorials to free exploration
        </div>
      </div>
    </div>
    <div
      class="mt-3 pt-3 border-t border-green-200"
    >
      <p
        class="text-sm text-green-600"
      >
        <strong>
          Current Mode:
        </strong>
         
        Sandbox
         - 
        Completely isolated environment
      </p>
    </div>
  </div>
  <div
    class="grid grid-cols-1 lg:grid-cols-3 gap-6"
  >
    <div
      class="lg:col-span-2"
    >
      <div
        class="space-y-4"
      >
        <div
          class="bg-blue-50 border border-blue-200 rounded-lg p-4"
        >
          <div
            class="flex justify-between items-start mb-2"
          >
            <h3
              class="font-medium text-blue-900"
            >
              🧪 Active Experiment: 
              Data Visualization
            </h3>
            <div
              class="space-x-2"
            >
              <button
                class="text-xs px-3 py-1 bg-gray-200 text-gray-600 rounded hover:bg-gray-300 disabled:opacity-50 disabled:cursor-not-allowed transition-colors"
              >
                Undo Last
              </button>
              <button
                class="text-xs px-3 py-1 bg-red-200 text-red-600 rounded hover:bg-red-300 transition-colors"
              >
                Discard
              </button>
              <button
                class="text-xs px-3 py-1 bg-green-200 text-green-600 rounded hover:bg-green-300 transition-colors"
              >
                Save & Apply
              </button>
            </div>
          </div>
          <p
            class="text-sm text-blue-700"
          >
            Explore different ways to visualize your data
          </p>
          <div
            class="mt-2 text-xs text-blue-600"
          >
            Mode: 
            sandbox
             | Changes: 
            1
             | Can Undo: 
            Yes
          </div>
        </div>
        <div
          class="bg-white border border-gray-200 rounded-lg"
        >
          <div
            class="bg-gray-50 px-4 py-2 border-b border-gray-200"
          >
            <span
              class="text-sm font-medium text-gray-700"
            >
              Experiment Workspace
            </span>
          </div>
          <div
            class="p-4 space-y-4"
          >
            <div>
              <label
                class="block text-sm font-medium text-gray-700 mb-2"
              >
                Try an experimental change:
              </label>
              <div
                class="grid grid-cols-2 gap-2"
              >
                <button
                  class="px-3 py-2 bg-gray-600 text-white rounded text-sm hover:bg-gray-700 transition-colors"
                >
                  Dark Mode
                </button>
                <button
                  class="px-3 py-2 bg-purple-600 text-white rounded text-sm hover:bg-purple-700 transition-colors"
                >
                  AI Boost
                </button>
                <button
                  class="px-3 py-2 bg-blue-600 text-white rounded text-sm hover:bg-blue-700 transition-colors"
                >
                  New Layout
                </button>
                <button
                  class="px-3 py-2 bg-green-600 text-white rounded text-sm hover:bg-green-700 transition-colors"
                >
                  Beta Feature
                </button>
                <button
                  class="px-3 py-2 bg-red-600 text-white rounded text-sm hover:bg-red-700 transition-colors"
                >
                  Delete Files
                </button>
                <button
                  class="px-3 py-2 bg-indigo-600 text-white rounded text-sm hover:bg-indigo-700 transition-colors"
                >
                  Notifications
                </button>
              </div>
            </div>
            <div>
              <h4
                class="text-sm font-medium text-gray-700 mb-2"
              >
                Changes Made:
              </h4>
              <div
                class="space-y-1 max-h-32 overflow-y-auto"
              >
                <div
                  class="text-sm text-gray-600 bg-gray-50 rounded px-2 py-1"
                >
                  1
                  . 
                  Changed color scheme to dark mode
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="space-y-4"
    >
      <div
        class="bg-yellow-50 border border-yellow-200 rounded-lg p-4"
      >
        <h3
          class="font-medium text-yellow-900 mb-3"
        >
          🛡️ Safety Guards
        </h3>
        <div
          class="space-y-2"
        >
          <div
            class="p-2 rounded border bg-blue-50 border-blue-200 text-blue-800"
          >
            <div
              class="flex items-start space-x-2"
            >
              <span
                class="text-sm"
              >
                🎯
              </span>
              <div
                class="flex-1"
              >
                <p
                  class="text-xs font-medium uppercase tracking-wide mb-1"
                >
                  scope
                   
                  - info
                </p>
                <p
                  class="text-sm"
                >
                  This experiment is isolated from your main data and settings
                </p>
              </div>
            </div>
          </div>
          <div
            class="p-2 rounded border bg-blue-50 border-blue-200 text-blue-800"
          >
            <div
              class="flex items-start space-x-2"
            >
              <span
                class="text-sm"
              >
                🔒
              </span>
              <div
                class="flex-1"
              >
                <p
                  class="text-xs font-medium uppercase tracking-wide mb-1"
                >
                  data
                   
                  - info
                </p>
                <p
                  class="text-sm"
                >
                  Automatic backup created before starting experiment
                </p>
              </div>
            </div>
          </div>
          <div
            class="p-2 rounded border bg-yellow-50 border-yellow-200 text-yellow-800"
          >
            <div
              class="flex items-start space-x-2"
            >
              <span
                class="text-sm"
              >
                🎯
              </span>
              <div
                class="flex-1"
              >
                <p
                  class="text-xs font-medium uppercase tracking-wide mb-1"
                >
                  scope
                   
                  - warning
                </p>
                <p
                  class="text-sm"
                >
                  Experiment will auto-expire in 24 hours for safety
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="bg-gray-50 border border-gray-200 rounded-lg p-4"
      >
        <h3
          class="font-medium text-gray-900 mb-3"
        >
          Exploration History
        </h3>
        <div
          class="space-y-2 max-h-48 overflow-y-auto"
        >
          <div
            class="p-2 rounded border border-blue-300 bg-blue-50"
          >
            <div
              class="font-medium text-sm"
            >
              Data Visualization
            </div>
            <div
              class="text-xs text-gray-600"
            >
              1
               changes made
               (Active)
            </div>
          </div>
        </div>
      </div>
      <div
        class="bg-purple-50 border border-purple-200 rounded-lg p-4"
      >
        <h3
          class="font-medium text-purple-900 mb-3"
        >
          Current Mode
        </h3>
        <div
          class="space-y-2 text-sm"
        >
          <div
            class="flex justify-between"
          >
            <span
              class="text-purple-700"
            >
              Mode:
            </span>
            <span
              class="font-medium"
            >
              Sandbox
            </span>
          </div>
          <div
            class="flex justify-between"
          >
            <span
              class="text-purple-700"
            >
              Active Experiments:
            </span>
            <span
              class="font-medium"
            >
              1
            </span>
          </div>
          <div
            class="flex justify-between"
          >
            <span
              class="text-purple-700"
            >
              Safety Guards:
            </span>
            <span
              class="font-medium"
            >
              3
            </span>
          </div>
        </div>
      </div>
      <div
        class="bg-green-50 border border-green-200 rounded-lg p-4"
      >
        <h3
          class="font-medium text-green-900 mb-2"
        >
          Safe Exploration Tips
        </h3>
        <ul
          class="text-sm text-green-700 space-y-1"
        >
          <li
            class="flex items-start"
          >
            <span
              class="w-1 h-1 bg-green-600 rounded-full mt-2 mr-2 flex-shrink-0"
            />
            Start with templates if you're new
          </li>
          <li
            class="flex items-start"
          >
            <span
              class="w-1 h-1 bg-green-600 rounded-full mt-2 mr-2 flex-shrink-0"
            />
            All changes are reversible
          </li>
          <li
            class="flex items-start"
          >
            <span
              class="w-1 h-1 bg-green-600 rounded-full mt-2 mr-2 flex-shrink-0"
            />
            Experiment freely - nothing can break
          </li>
          <li
            class="flex items-start"
          >
            <span
              class="w-1 h-1 bg-green-600 rounded-full mt-2 mr-2 flex-shrink-0"
            />
            Save only changes you want to keep
          </li>
          <li
            class="flex items-start"
          >
            <span
              class="w-1 h-1 bg-green-600 rounded-full mt-2 mr-2 flex-shrink-0"
            />
            Try different modes for various levels of guidance
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`SafeExplorationDemo Snapshot matches snapshot with hidden safety info 1`] = `
<div
  class="max-w-6xl mx-auto p-6 bg-white rounded-lg shadow-lg"
>
  <header
    class="mb-6 flex justify-between items-start"
  >
    <div>
      <h2
        class="text-2xl font-bold text-gray-900 mb-2"
      >
        Safe Exploration Playground
      </h2>
      <p
        class="text-gray-600"
      >
        Experiment freely without fear of breaking anything
      </p>
    </div>
    <div
      class="flex items-center space-x-4"
    >
      <select
        class="px-3 py-2 border border-gray-300 rounded-lg text-sm focus:outline-none focus:ring-2 focus:ring-green-500"
      >
        <option
          value="sandbox"
        >
          Sandbox Mode
        </option>
        <option
          value="guided"
        >
          Guided Mode
        </option>
        <option
          value="freeform"
        >
          Freeform Mode
        </option>
      </select>
      <button
        class="px-4 py-2 bg-green-600 text-white rounded-lg hover:bg-green-700 transition-colors"
      >
        Safety Info
      </button>
    </div>
  </header>
  <div
    class="grid grid-cols-1 lg:grid-cols-3 gap-6"
  >
    <div
      class="lg:col-span-2"
    >
      <div
        class="space-y-6"
      >
        <div
          class="bg-gray-50 border border-gray-200 rounded-lg p-4"
        >
          <h3
            class="font-medium text-gray-900 mb-4"
          >
            Start New Experiment
          </h3>
          <div
            class="space-y-4"
          >
            <div>
              <label
                class="block text-sm font-medium text-gray-700 mb-2"
              >
                Experiment Name
              </label>
              <input
                class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-green-500"
                placeholder="My AI Experiment"
                type="text"
                value=""
              />
            </div>
            <button
              class="w-full px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 disabled:opacity-50 disabled:cursor-not-allowed transition-colors"
              disabled=""
            >
              Start Custom Experiment
            </button>
          </div>
        </div>
        <div
          class="bg-white border border-gray-200 rounded-lg"
        >
          <div
            class="bg-gray-50 px-4 py-2 border-b border-gray-200"
          >
            <span
              class="text-sm font-medium text-gray-700"
            >
              Quick Start Templates
            </span>
          </div>
          <div
            class="p-4 space-y-3"
          >
            <div
              class="border border-gray-200 rounded-lg p-3 cursor-pointer hover:bg-gray-50 transition-colors"
            >
              <h4
                class="font-medium text-gray-900"
              >
                AI Writing Style
              </h4>
              <p
                class="text-sm text-gray-600 mt-1"
              >
                Experiment with different AI writing styles and tones
              </p>
            </div>
            <div
              class="border border-gray-200 rounded-lg p-3 cursor-pointer hover:bg-gray-50 transition-colors"
            >
              <h4
                class="font-medium text-gray-900"
              >
                Interface Layout
              </h4>
              <p
                class="text-sm text-gray-600 mt-1"
              >
                Try new interface arrangements and components
              </p>
            </div>
            <div
              class="border border-gray-200 rounded-lg p-3 cursor-pointer hover:bg-gray-50 transition-colors"
            >
              <h4
                class="font-medium text-gray-900"
              >
                Data Visualization
              </h4>
              <p
                class="text-sm text-gray-600 mt-1"
              >
                Explore different ways to visualize your data
              </p>
            </div>
            <div
              class="border border-gray-200 rounded-lg p-3 cursor-pointer hover:bg-gray-50 transition-colors"
            >
              <h4
                class="font-medium text-gray-900"
              >
                Automation Rules
              </h4>
              <p
                class="text-sm text-gray-600 mt-1"
              >
                Test new automation workflows safely
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="space-y-4"
    >
      <div
        class="bg-gray-50 border border-gray-200 rounded-lg p-4"
      >
        <h3
          class="font-medium text-gray-900 mb-3"
        >
          Exploration History
        </h3>
        <p
          class="text-sm text-gray-600 italic"
        >
          No experiments yet
        </p>
      </div>
      <div
        class="bg-purple-50 border border-purple-200 rounded-lg p-4"
      >
        <h3
          class="font-medium text-purple-900 mb-3"
        >
          Current Mode
        </h3>
        <div
          class="space-y-2 text-sm"
        >
          <div
            class="flex justify-between"
          >
            <span
              class="text-purple-700"
            >
              Mode:
            </span>
            <span
              class="font-medium"
            >
              Sandbox
            </span>
          </div>
          <div
            class="flex justify-between"
          >
            <span
              class="text-purple-700"
            >
              Active Experiments:
            </span>
            <span
              class="font-medium"
            >
              0
            </span>
          </div>
          <div
            class="flex justify-between"
          >
            <span
              class="text-purple-700"
            >
              Safety Guards:
            </span>
            <span
              class="font-medium"
            >
              0
            </span>
          </div>
        </div>
      </div>
      <div
        class="bg-green-50 border border-green-200 rounded-lg p-4"
      >
        <h3
          class="font-medium text-green-900 mb-2"
        >
          Safe Exploration Tips
        </h3>
        <ul
          class="text-sm text-green-700 space-y-1"
        >
          <li
            class="flex items-start"
          >
            <span
              class="w-1 h-1 bg-green-600 rounded-full mt-2 mr-2 flex-shrink-0"
            />
            Start with templates if you're new
          </li>
          <li
            class="flex items-start"
          >
            <span
              class="w-1 h-1 bg-green-600 rounded-full mt-2 mr-2 flex-shrink-0"
            />
            All changes are reversible
          </li>
          <li
            class="flex items-start"
          >
            <span
              class="w-1 h-1 bg-green-600 rounded-full mt-2 mr-2 flex-shrink-0"
            />
            Experiment freely - nothing can break
          </li>
          <li
            class="flex items-start"
          >
            <span
              class="w-1 h-1 bg-green-600 rounded-full mt-2 mr-2 flex-shrink-0"
            />
            Save only changes you want to keep
          </li>
          <li
            class="flex items-start"
          >
            <span
              class="w-1 h-1 bg-green-600 rounded-full mt-2 mr-2 flex-shrink-0"
            />
            Try different modes for various levels of guidance
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
